# dslv-zpdi

./: .cursorrules  .dockerignore  .env.example  .gemini-config  .gitignore  AGENTS.md  AUDIT_VIOLATIONS.md  CHANGELOG.md  CLOSEOUT_PHASE2B_2026-06-05.md  CODEOWNERS  COLLABORATION_GUIDE.md  CONTRIBUTING.md  CREW_MEMORY.md  DEPLOYMENT_READY.md  Dockerfile  GROK_BUILD_MEMORY.md  LICENSE  MASTER_SPEC.md  PHASE_2A_HARDWARE_BUILD_LIST.md  PHASE_2A_TIER_1_BUILD_SHEET.md  README.md  README_WEB.md  REFINEMENT_REPORT.md  RELEASE_NOTES_v4.0.2.4.md  RELEASE_NOTES_v4.2.0.md  RELEASE_NOTES_v4.2.1.md  RELEASE_NOTES_v4.3.0.md  RELEASE_NOTES_v4.4.0.md  RELEASE_NOTES_v4.5.0.md  RELEASE_NOTES_v4.6.0.md  RELEASE_NOTES_v4.7.1.md  RELEASE_NOTES_v4.7.2.md  RELEASE_NOTES_v4.8.0.md  RELEASE_NOTES_v4.8.1.md  RELEASE_NOTES_v5.0.0.md  RF_METROLOGY_PIVOT_REPORT.md  SECURITY.md  SESSION_REPORT_2026-04-09.md  SESSION_REPORT_2026-04-10.md  SESSION_REPORT_2026-04-11_LBE1420.md  (+45 more)
.autofix_backups/20260408_070901/: MASTER_SPEC.md.bak
.codex/: config.toml
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  bug_report.yml  config.yml  documentation_issue.yml  feature.yml  feature_request.yml  hardware_incident.yml
.github/codeql/: codeql-config.yml
.github/workflows/: conventional-commits.yml  dependency-review.yml  docker.yml  dslv_zpdi_ci.yml  release.yml  security.yml
CLAUDE-HOME/: SESSION_REPORT_2026-04-19_DEPLOYMENT.md  SESSION_REPORT_2026-04-19_GITHUB.md  SESSION_REPORT_2026-04-19_HARDENING.md  SESSION_REPORT_2026-04-19_REBOOT_PREP.md
GEM-HOME/: add_nmea_sim.py  apply_fixes.py  clean_sim.py  fix_1421_remainders.py  fix_spec.py  harden_installer.py  harden_installer_v2.py  patch_pipeline.py  patch_pipeline_v2.py  update_hal.py  update_hal_docs.py  update_living_master.py  upgrade_simulator.py
artifacts/baseline/: base_commit.txt  git_status.txt  keyword_search.txt  tracked_file_list.sha256
config/: PiRepo.nmconnection  dashboard.toml.example  deployment.yaml  dslv-zpdi-baseline.service  dslv-zpdi-hackrf-init.service  dslv-zpdi-node-receiver.service  dslv-zpdi-preflight.service  dslv-zpdi-tuning.service  dslv-zpdi-webdash.service  dslv-zpdi.service  email.example.yaml  sensor_location.example.yaml
config/node_profiles/: simulator.yaml  tier1_pluto_lbe1421.yaml
config/os-hardening/: 99-dslv-zpdi.conf  99-hackrf.rules  99-pps.rules  99-watchdog.rules  dslv-zpdi-baseline.service  dslv-zpdi-firstboot.service  dslv-zpdi-preflight.service  dslv-zpdi-rtl-blacklist.conf  dslv-zpdi-tuning.service  dslv-zpdi.service  journald-dslv-zpdi.conf  logrotate-dslv-zpdi  nftables-dslv-zpdi.rules  watchdog.conf
docs/: ARCH-PHASE-2A-PIVOT.md  DISCUSSIONS_GUIDE.md  HARDWARE_CHANGE_JUSTIFICATION.md  KIMI_BRANCH_AUDIT.md  KIMI_CLOSEOUT_AUTH.txt  KIMI_CLOSEOUT_BRANCH_AUDIT.txt  KIMI_CLOSEOUT_FLAKY_ON_MAIN.txt  KIMI_CLOSEOUT_ORPHAN.txt  KIMI_CLOSEOUT_POST_STATE.txt  KIMI_CLOSEOUT_PRE_STATE.txt  KIMI_CLOSEOUT_QUESTIONS.md  KIMI_CLOSEOUT_TESTS.txt  KIMI_CLOSEOUT_TIMING.txt  KIMI_PHASE2B_INTAKE.md  KIMI_QUESTIONS.md  LBE-1421_WIRING.md  PHASE_2A_HARDWARE_BUILD_LIST.md  PIXEL_NODE_SETUP.md  PLUTO_SDR_FIRMWARE_GUIDE.md  RADONEYE_GATT_MAP.md  README.md  RF_MAGNETIC_SHIELDING.md
docs/PlutoSDR/: 1_PlutoSDR_Plus_Preparation_Guide.md  2_PlutoSDR_Plus_Troubleshooting_Reference.md
docs/archive/: SESSION_REPORT_2026-04-25_Pipeline_Dashboard_Repair.md  SESSION_REPORT_2026-04-26_PipelineHardening.md
docs/audits/: GROK_WORK_REPORT_2026-06-11.md  PLUTOSDR_PIVOT_BASELINE_AUDIT.md  REPOSITORY_HARDENING_REPORT_2026-06-10.md
docs/build-guides/: README.md
docs/collaboration/: NEXT_STEPS.md  README.md  TURNOVER_2026-06-17_Codex_Kimi_Hardening.md  TURNOVER_TEMPLATE.md
docs/hardware/: HAMGEEK_AD9363_PLUTOSDR_PLUS.md  HAMGEEK_AD9363_TIMING_PORT_VERIFICATION.md  LBE1421_PLUTO_WIRING.md  UPDOWNCONVERTER_INTEGRATION.md
docs/operations/: PLUTO_TIER1_DEPLOYMENT.md
docs/qualification/: HACKRF_BASELINE_MATRIX.md  PLUTO_ACCEPTANCE_MATRIX.md  TIER1_HARDWARE_QUALIFICATION_STANDARD.md
docs/security/: AUDIT_AND_ACCOUNTABILITY.md  HDF5_TAMPER_EVIDENCE_AND_KEY_MANAGEMENT.md
specs/: SPEC-003.1.md  SPEC-003.md  SPEC-003A.md  SPEC-004A.1.md  SPEC-004A.2.md  SPEC-004A.3.md  SPEC-004A.4.md  SPEC-004A.5.md  SPEC-004A.8.md  SPEC-004A.md  SPEC-005.md  SPEC-005A.1.md  SPEC-005A.1a.md  SPEC-005A.1b.md  SPEC-005A.2.md  SPEC-005A.2a.md  SPEC-005A.2b.md  SPEC-005A.2c.md  SPEC-005A.3.md  SPEC-005A.4-GPS.md  SPEC-005A.4.md  SPEC-005A.4a.md  SPEC-005A.4b.md  SPEC-005A.5.md  SPEC-005A.md  SPEC-006.1.md  SPEC-006.2.md  SPEC-006.2a.md  SPEC-006.2b.md  SPEC-006.3.md  SPEC-006.4.md  SPEC-006.5.md  SPEC-006.5a.md  SPEC-006.6.md  SPEC-006.md  SPEC-007.1.md  SPEC-007.2.md  SPEC-007.3.md  SPEC-007.3a.md  SPEC-007.3b.md  (+24 more)
src/dslv_zpdi/: __init__.py  config_loader.py  config_models.py  logging_config.py  main_pipeline.py
src/dslv_zpdi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/layer1_ingestion/: __init__.py  (+7 more)
termux-boot/: 99-start-zpdi.sh
tests/: __init__.py  conftest.py  run_fault_injection.py  run_golden_sample.py  test_barometric_coherence.py  test_calibration.py  test_cli.py  test_coherence.py  test_config_models.py  test_ewma_and_routing.py  test_hardware_failure_paths.py  test_hdf5_rotation.py  test_integration.py  test_key_provider.py  test_mobile_compliance.py  test_node_receiver.py  test_payload.py  test_pipeline.py  test_pixel_node_bridge.py  test_pluto_hal.py  test_qualification.py  test_radon_session.py  test_radon_session_writer.py  test_radoneye_ingestor.py  test_spec009_fsm.py  test_spec009_state_machine.py  test_tier1_server.py  test_timing_monitor.py  test_uplink_manager.py  test_watchdog.py
tools/: build_pluto_firmware.sh  capture_baseline.py  check_commit_message.py  check_ptp.py  check_timing.py  check_version_sync.py  factory_calibration.py  health_check.sh  health_check_mobile.sh  launch_project.sh  mobile_node_sender.sh  orphan_checker.py  preflight.sh  provision_tier1.py  repo_guard.py  toggle_simulator.sh
(+106 files in other folders)
