[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dslv-zpdi"
version = "4.5.0"
description = "Distributed Sensor Locational Vectoring — Zero-Point Data Integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Joseph R. Fross", email = "jrfross@gmail.com"}
]
keywords = ["SIGINT", "Kuramoto", "HDF5", "GPSDO", "SDR", "Phase-Lock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
dslv-zpdi-pipeline = 'dslv_zpdi.main_pipeline:main'
dslv-zpdi-dashboard = 'dashboard.__main__:main'
dslv-zpdi-preflight = 'dslv_zpdi.layer1_ingestion.hal_hardware:HardwareHAL.verify_tier1_phase_lock'

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.6.0",
    "pyserial>=3.5",
    "pyhackrf>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-json-logger>=2.0.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "folium>=0.14.0",
    "dataclasses; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "pylint>=2.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
