[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dslv-zpdi"
version = "5.0.0"
description = "Distributed Sensor Locational Vectoring — Zero-Point Data Integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Joseph R. Fross", email = "jrfross@gmail.com"}
]
keywords = ["SIGINT", "Kuramoto", "HDF5", "GPSDO", "SDR", "Phase-Lock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.6.0",
    "pyserial>=3.5",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-json-logger>=2.0.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "folium>=0.14.0",
    "flask>=2.0.0",
    "psutil>=5.9.0",
    "bleak>=0.21.0",
    "dataclasses; python_version<'3.10'",
]

[project.optional-dependencies]
pluto = [
    # libiio Python binding is normally a system package (python3-libiio).
    # This group reserves the namespace for any future PyPI-hosted bindings.
]
hackrf = [
    "pyhackrf>=0.2.0",
]
hardware = [
    "pyhackrf>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "pylint>=2.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dslv-zpdi-pipeline = "dslv_zpdi.main_pipeline:main"
dslv-zpdi-dashboard = "dashboard.__main__:main"
dslv-zpdi-probe = "dslv_zpdi.cli.probe:probe_main"
dslv-zpdi-preflight = "dslv_zpdi.cli.preflight:preflight_main"
dslv-zpdi-verify = "dslv_zpdi.cli.verify:verify_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a coroutine test to run under the asyncio event loop",
    "hardware: requires physical hardware",
    "soak: long-duration test",
    "slow: slow test",
    "pluto: PlutoSDR-specific",
    "hackrf: HackRF-specific",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dslv_zpdi.layer2_core.*"
disallow_untyped_defs = true

[tool.pyright]
include = ["src/dslv_zpdi/layer2_core"]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "GEM-HOME",
    "patch_docs.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
source = ["dslv_zpdi"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Conservative floor set just below the 4.8.0 simulator baseline (~53%). Raise
# deliberately as legacy modules (main_pipeline, watchdog) gain coverage.
fail_under = 52
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def __repr__",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
